--- a/src/app/components/articles/creature-article-update/creature-article-update.component.html
+++ b/src/app/components/articles/creature-article-update/creature-article-update.component.html
@@ -1,13 +1,13 @@
 <div class="main">
     <article class="mb-5">
         <!-- Heading -->
-        <div *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
+        <ng-container *ngIf="(isInUpdateState() || isInOutdatedUpdateState()) && userModel; else createState">
             <app-edit-toggle [isInUpdateState]=true [link]="updateCancelUrl"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Creature {{ userModel.name }}
             </h2>
-        </div>
+        </ng-container>
         <ng-template #createState>
             <app-edit-toggle [isInUpdateState]=true [link]="creationCancelUrl"></app-edit-toggle>
 
